<?xml version="1.0"?>
<package format="3">
  <name>gazebo_environment</name>
  <version>0.0.0</version>
  <description>Gazebo simulation for Sonoma car</description>

  <maintainer email="you@example.com">junaet-mahbub</maintainer>
  <license>MIT</license>

  <build_type>ament_python</build_type>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros_gz</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
</package>
